--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,4 @@
 {
-  "endOfLine": "auto",
   "semi": true,
   "singleQuote": true,
   "bracketSpacing": true,
@@ -7,5 +6,6 @@
   "arrowParens": "always",
   "proseWrap": "preserve",
   "htmlWhitespaceSensitivity": "ignore",
-  "vueIndentScriptAndStyle": false
+  "vueIndentScriptAndStyle": false,
+  "endOfLine": "lf"
 }
