--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,15 @@
           { "blankLine": "always", "prev": "*", "next": "export" },
           { "blankLine": "always", "prev": "export", "next": "*" }
         ],
-        "prettier/prettier": "error",
+        "comma-dangle": "off",
+        "@typescript-eslint/comma-dangle": ["error", {
+            "arrays": "never",
+            "objects": "always-multiline",
+            "imports": "never",
+            "exports": "never",
+            "functions": "never"
+        }],
+        "prettier/prettier": "off",
         "linebreak-style": ["error", "unix"],
         "@angular-eslint/directive-selector": [
           "error",
