--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,14 +9,15 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates",
-        "plugin:prettier/recommended"
+        "plugin:@angular-eslint/template/process-inline-templates"
       ],
-      "plugins": ["import", "prettier"],
+      "plugins": ["import"],
       "rules": {
+        "indent": ["error", 2],
         "import/newline-after-import": ["error", { "count": 1 }],
         "padding-line-between-statements": [
           "error",
+          // { "blankLine": "always", "prev": "*", "next": "export" },
           { "blankLine": "always", "prev": "*", "next": "export" },
           { "blankLine": "always", "prev": "export", "next": "*" }
         ],
