--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "src/styles.scss",
+              "src/styles/styles.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css" 
             ],
             "scripts": []
